deploy/k8s/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: li3d-web
  labels:
    app: li3d
    component: web
spec:
  selector:
    app: li3d
    component: web
  ports:
    - name: http
      port: 80
      targetPort: http
